--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,15 @@
 </head>
 <body>
 
-<h1 class = "centered">StarBoard: One-Stop Dashboard for Stargazers</h1>
+<h1 class = "centered">StarBoard: One-Stop Site for Stargazers</h1>
+
+<h1 class = "centered">StarBoard</h1>
+<nav class="nav-tabs ">
+  <a href="/index.html"class="active">StarBoard</a> |
+  <a href="/starfinder.html">StarFinder</a> |
+  <a href="/about.html">About</a>
+</nav>
+
 
 <div id="location" class = "centered">Use Location for More Features 
   <button id = "use-location">Use My Current Location</button>
@@ -41,55 +49,15 @@
   </div>
 </div>
 
-<!--
-<div class="card">
-  <h2>Weather</h2>
-  <div id="weather">Loading…</div>
-</div>
--->
-<div class = "card">
-  <div class = "flex">
-    <div>
-      <h2>Brightest Objects Visible In Your Sky Tonight</h2>
-      <h3 id = "directions"></h3>
-    </div>
-    <div id="brightest-panel" class="panel">
-      <h3>Object/App. Magnitude:</h3>
-      <ul id="brightest-list" class="list" aria-label="Brightest objects list"></ul>
-    </div>
-  </div>
-</div>
-
-
-
-<div id="skyWrap", class = "card">
-  <h2 class = "centered"> SkyMap: To pan, use mouse or select object above and press "Move To" button below.
-    <br> The default position of the skymap is what you would see looking straight up facing due north.
-  </h2>
-  <div id="starmap" style="width: 100%; height: 1440px;"></div>
-  <button id="moveToObject">Move to Selected Object</button>
-
-  <div id="targetRing" class="hidden"></div>
-  <div id="targetLabel" class="hidden"></div>
-</div>
-
-
-<!--
-<div class="card">
-  <h2>Sky Map</h2>
-  <div id="starmap" style="width: 100%; height: 480px;"></div>
-</div>
--->
-
 <script src="/vendor/virtualsky/stuquery.min.js"></script>
-<script src="/vendor/virtualsky/virtualsky.min.js"></script>
+
 
 <script type="module" src="/js/app.js"></script>
-<script type="module" src="/js/spaceobjects.js"></script>
 
 
 
 
 
+<h3 class = "centered"> Tobias Waters, 2026 </h3>
 </body>
 </html>
