minor change to about page

--- a/public/about.html
+++ b/public/about.html
@@ -15,7 +15,7 @@
   <a href="/about.html"class="active">About</a>
 </nav>
 
-<h1>About StarBoard</h1>
+<h1 class = "centered">About StarBoard</h1>
 <div class = "card">
     <div class = "centered">
         <h2>Written by Tobias Waters</h2>
